<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- GENERAL -->
    <string name="app_name">Squash Simulation</string>
	<string name="app_description">Simulation of the environment on a Squash court.</string>
	
	<!-- BUTTONS -->
	<string name="button_controls">Controls</string>
	<string name="button_randomize">Randomize!</string>
	<string name="button_reset">Reset movables</string>
	<string name="button_toggle">Toggle engine</string>
	
	<!-- PREFERENCE ENTRIES -->
	<string name="title_main">Main settings</string>
	
	<string name="draw_mode_default">Use default draw mode</string>
	<string name="draw_mode_lines">Draw lines</string>
	<string name="draw_mode_line_loop">Draw looping lines</string>
	<string name="draw_mode_triangles">Draw triangles</string>
	<string name="draw_mode_points">Draw points</string>
	
	<string name="camera_mode_rotating">Rotating camera</string>
	<string name="camera_mode_backwall">Backwall camera</string>
	<string name="camera_mode_sidewall_left">Sidewall camera left</string>
	<string name="camera_mode_frontwall">Frontwall camera</string>
	<string name="camera_mode_sidewall_right">Sidewall camera right</string>
	
	<string name="key_draw_mode">draw_mode</string>
	<string name="title_draw_mode">Draw Mode</string>
	<string name="summary_draw_mode">Select draw mode for 3D objects</string>
	
	<string name="key_select_objects">select_objects</string>
	<string name="title_select_objects">Select Objects</string>
	<string name="summary_select_objects">Tap to select objects to be drawn</string>
	
	<string name="key_camera_mode">camera_mode</string>
	<string name="title_camera_mode">Camera Mode</string>
	<string name="summary_camera_mode">Select camera mode</string>
	
	<string name="key_reset">reset</string>
	<string name="title_reset">Reset world</string>
	<string name="summary_reset">Return moving objects to their initial place</string>
	
	<string name="key_hud">hud</string>
	<string name="title_hud">HUD</string>
	<string name="summary_hud">Show heads-up display</string>
	<string name="summary_no_hud">Hide heads-up display</string>
	
	<string name="key_mute">mute</string>
	<string name="title_mute">Mute</string>
	<string name="summary_mute">Suppress sounds</string>
	<string name="summary_unmute">Play sounds</string>
	
	
	<string name="title_general_settings">General settings</string>
	<string name="title_drawing_settings">Drawing settings</string>
	<string name="title_camera_settings">Camera settings</string>
	<string name="title_ball_settings">Ball settings</string>
	<string name="title_world_constants">World constants</string>
	<string name="title_arena_rows">Number of seat rows in the arena</string>
	<string name="title_other_settings">Other settings</string>
	
	<string name="title_world">World settings</string>
	<string name="summary_world">Change settings related to the virtual world</string>
		
	<string name="title_arena">Arena settings</string>
	<string name="summary_arena">Change settings related to the virtual arena</string>
	
	<string name="title_x">x-component of the vector</string>
	<string name="title_y">y-component of the vector</string>
	<string name="title_z">z-component of the vector</string>
	
	<string name="title_camera_position_x">Camera position: X</string>
	<string name="key_camera_position_x">camera_position_x</string>
	<string name="title_camera_position_y">Camera position: Y</string>
	<string name="key_camera_position_y">camera_position_y</string>
	<string name="title_camera_position_z">Camera position: Z</string>
	<string name="key_camera_position_z">camera_position_z</string>
	
	<string name="title_ball_position_x">Ball position: X</string>
	<string name="key_ball_position_x">ball_position_x</string>
	<string name="title_ball_position_y">Ball position: Y</string>
	<string name="key_ball_position_y">ball_position_y</string>
	<string name="title_ball_position_z">Ball position: Z</string>
	<string name="key_ball_position_z">ball_position_z</string>
	
	<string name="title_ball_speed_x">Ball speed: X</string>
	<string name="key_ball_speed_x">ball_speed_x</string>
	<string name="title_ball_speed_y">Ball speed: Y</string>
	<string name="key_ball_speed_y">ball_speed_y</string>
	<string name="title_ball_speed_z">Ball speed: Z</string>
	<string name="key_ball_speed_z">ball_speed_z</string>
	
	<string name="default_camera_position_x">0</string>
	<string name="default_camera_position_y">1.5</string>
	<string name="default_camera_position_z">5</string>

	<string name="default_ball_position_x">-2</string>
	<string name="default_ball_position_y">1</string>
	<string name="default_ball_position_z">0</string>
	
	<string name="default_ball_speed_x">3</string>
	<string name="default_ball_speed_y">1</string>
	<string name="default_ball_speed_z">-1</string>
	

	<string name="key_speed_factor">speed_factor</string>
	<string name="title_speed_factor">Speed Factor</string>
	<string name="summary_speed_factor">Set Speed at which the MovementEngine runs</string>
	<string name="default_speed_factor">1</string>
	
	<string name="key_coefficient_of_restitution">coefficient_of_restitution</string>
	<string name="title_coefficient_of_restitution">Coefficient of Restitution</string>
	<string name="summary_coefficient_of_restitution">Set Coefficient of Restitution</string>
	<string name="default_coefficient_of_restitution">0.75</string>
	
	<string name="key_impact_exponent">impact_exponent</string>
	<string name="title_impact_exponent">Exponent on speed on impact</string>
	<string name="summary_impact_exponent">Set exponent on impact</string>
	<string name="default_impact_exponent">0.15</string>
	
	<string name="key_coefficient_of_roll_friction">coefficient_of_roll_friction</string>
	<string name="title_coefficient_of_roll_friction">Roll friction</string>
	<string name="summary_coefficient_of_roll_friction">Set roll friction</string>
	<string name="default_coefficient_of_roll_friction">0.3</string>
	
	<string name="key_seat_rows_back">seat_rows_back</string>
	<string name="title_seat_rows_back">Seat rows behind at the back</string>
	<string name="default_seat_rows_back">7</string>
	
	<string name="key_seat_rows_front_side">seat_rows_front_side</string>
	<string name="title_seat_rows_front_side">Seat rows at the front and the sides</string>
	<string name="default_seat_rows_front_side">4</string>

	<string name="title_arena_colors">Change color of elements of the arena</string>
	<string name="key_color_background">color_background</string>
	<string name="title_color_background">Background color of the world</string>
	<string name="key_color_seat">color_seat</string>
	<string name="title_color_seat">Color of the seats</string>
	<string name="key_color_floor">color_floor</string>
	<string name="title_color_floor">Color of the floor</string>
	<string name="key_color_wall">color_wall</string>
	<string name="title_color_wall">Color of the walls on the stands</string>
		
	<string name="title_shots">Pre-definied shots</string>
	<string name="summary_shots">Set ball location and speed to pre-defined values</string>
	
	<string name="title_forehand">Forehand shots</string>
	<string name="title_backhand">Backhand shots</string>
	
	<string name="title_fh_drive">Drive</string>
	<string name="key_fh_drive">fh_drive</string>
	<string name="title_fh_short_drop">Short drop shot</string>
	<string name="key_fh_short_drop">fh_short_drop</string>
	<string name="title_fh_long_drop">Long drop shot</string>
	<string name="key_fh_long_drop">fh_long_drop</string>
	<string name="title_fh_boast">Boast</string>
	<string name="key_fh_boast">fh_boast</string>
	<string name="title_fh_serve">Serve</string>
	<string name="key_fh_serve">fh_serve</string>
	
	<string name="title_bh_drive">Drive</string>
	<string name="key_bh_drive">bh_drive</string>
	<string name="title_bh_short_drop">Short drop shot</string>
	<string name="key_bh_short_drop">bh_short_drop</string>
	<string name="title_bh_long_drop">Long drop shot</string>
	<string name="key_bh_long_drop">bh_long_drop</string>
	<string name="title_bh_boast">Boast</string>
	<string name="key_bh_boast">bh_boast</string>
	<string name="title_bh_serve">Serve</string>
	<string name="key_bh_serve">bh_serve</string>
	
	<!-- About -->
	<string name="about_author">Created by Fabian Furger (2014-2015)</string>
	<string name="about_project">\"Squash Simulation\" started as a hobby project trying to simulate the environment on a squash court and was improved in the course of the \"Mobile Application Development\" module at Coventry University, England.</string>
	<string name="about_title_libraries">External libraries</string>
	<string name="about_summary_libraries">Graphics are displayed using OpenGL for ES, version 2.0.
The color picker preferences are created using Ambilwarna (https://github.com/yukuku/ambilwarna).</string>
</resources>