<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/title_general_settings" >
        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/key_mute"
            android:summary="@string/summary_unmute"
            android:title="@string/title_mute" >
        </SwitchPreference>

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/key_reset"
            android:summary="@string/summary_reset"
            android:title="@string/title_reset" >
        </CheckBoxPreference>
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/key_hud"
            android:summary="@string/summary_hud"
            android:title="@string/title_hud" >
        </CheckBoxPreference>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/title_drawing_settings" >
        <ListPreference
            android:defaultValue="-1"
            android:entries="@array/entries_draw_mode"
            android:key="@string/key_draw_mode"
            android:summary="@string/summary_draw_mode"
            android:title="@string/title_draw_mode" />

        <MultiSelectListPreference
            android:defaultValue="@array/empty_array"
            android:entries="@array/empty_array"
            android:entryValues="@array/empty_array"
            android:key="@string/key_select_objects"
            android:summary="@string/summary_select_objects"
            android:title="@string/title_select_objects" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/title_other_settings" >
    </PreferenceCategory>

</PreferenceScreen>