<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:summary="@string/summary_arena"
        android:title="@string/title_arena" >
        <PreferenceCategory android:title="@string/title_arena_rows" >
            <EditTextPreference
                android:defaultValue="@string/default_seat_rows_back"
                android:inputType="number"
                android:key="@string/key_seat_rows_back"
                android:title="@string/title_seat_rows_back" >
            </EditTextPreference>
            <EditTextPreference
                android:defaultValue="@string/default_seat_rows_front_side"
                android:inputType="number"
                android:key="@string/key_seat_rows_front_side"
                android:title="@string/title_seat_rows_front_side" >
            </EditTextPreference>
        </PreferenceCategory>
        <PreferenceCategory android:title="@string/title_arena_colors" >
            <yuku.ambilwarna.widget.AmbilWarnaPreference
                android:defaultValue="0xffffff"
                android:key="@string/key_color_background"
                android:title="@string/title_color_background" />
            <yuku.ambilwarna.widget.AmbilWarnaPreference
                android:defaultValue="0xffffff"
                android:key="@string/key_color_seat"
                android:title="@string/title_color_seat" />
            <yuku.ambilwarna.widget.AmbilWarnaPreference
                android:defaultValue="0xffffff"
                android:key="@string/key_color_floor"
                android:title="@string/title_color_floor" />
            <yuku.ambilwarna.widget.AmbilWarnaPreference
                android:defaultValue="0xffffff"
                android:key="@string/key_color_wall"
                android:title="@string/title_color_wall" />
        </PreferenceCategory>
    </PreferenceScreen>

</PreferenceScreen>