<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/buttonLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:divider="?android:dividerHorizontal"
        android:dividerPadding="8dp"
        android:showDividers="middle" >

        <Button
            android:id="@+id/butControls"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="showControls"
            android:text="@string/button_controls" />

        <Button
            android:id="@+id/butRandomize"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="randomizeMovables"
            android:text="@string/button_randomize" />

        <Button
            android:id="@+id/butReset"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="resetMovables"
            android:text="@string/button_reset" />

        <Button
            android:id="@+id/butStartStop"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="startStopMovementEngine"
            android:text="@string/button_toggle" />
    </LinearLayout>

    <ch.squash.simulation.main.SquashView
        android:id="@+id/squashView1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/buttonLayout"
        android:tag="dontHide" />

    <TextView
        android:id="@+id/txtHudFps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:tag="dontHide"
        android:textColor="#ff0000" />

    <TextView
        android:id="@+id/txtHudBall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:tag="dontHide"
        android:textColor="#0000ff" />

</RelativeLayout>